tests/invalid/import_module_class_wrong_arg_count/main.py
import provider

if __name__ == '__main__':
    m = provider.Model()
